# cow-yield-model

./: .gitignore  README.md  information.md  main.py  pyproject.toml  requirements.txt
data/: cattle_milk_yield_health_dummy.csv
notebooks/: EDA_and_training.ipynb
src/: predict.py  train.py  utils.py
src/api/: api.py
src/models/: preprocess.py  train.py
